--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
-<html>
-<head>
-  <title> 한종언냐들 </title>
+<html><head>
+  <title>한종언냐들</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -16,5 +15,4 @@
   <p>일단 주로 서로 회사에 있을때 연락이 닿는다.</p>
   <p>그래도 근래 많이 만나는편.</p>
   <p>내용추가 대기중</p>
-</body>
-</html>
+</body></html>
