--- a/2.html
+++ b/2.html
@@ -14,7 +14,8 @@
   <h2>김수연</h2>
   <p>(30,자칭여신,mbti미상)</p>
   <img src="수박수연.jpg" width="20%">
-  <p>최근 퇴사를 했다!!!</p>
-  <p><a href="오수.jpg">오수</a> 와의 질긴인연도 안녕~</p>  
+  <p>최근 <strong>퇴사</strong>를 했다!!!</p>
+  <p><a href="오수.jpg">오수</a> 와의 질긴인연도 안녕~</p> 
+  <p>먹는것에 꽤나 큰 노력을 쏟아붓는다.</p>
 </body>
 </html>
