--- a/3.html
+++ b/3.html
@@ -16,6 +16,7 @@
   <img src="딴짓하다걸린사진.jpg" width="20%">
   <p>일하는척 하는데에 약간의 어려움이 있는 듯 하다.</p>
   <p>연애를 생각이상으로 오래 이어오는중.</p>
-  <p><strong>의외로 핫걸</strong></p>
+  <p>의외로<strong>핫걸</strong></p>
+  <p>근황은 노랭이의 코트 유무가 굉장히 궁금하다 정도.</p>
 </body>
 </html>
