--- a/3.html
+++ b/3.html
@@ -17,6 +17,7 @@
   <p>일하는척 하는데에 약간의 어려움이 있는 듯 하다.</p>
   <p>연애를 생각이상으로 오래 이어오는중.</p>
   <p>의외로<strong>핫걸</strong></p>
+  <p><h3><strong>큐티섹시성미<a href="ANG.jpg">ANG~</a></strong></h3></p>
   <p>근황은 노랭이의 코트 유무가 굉장히 궁금하다 정도.</p>
 </body>
 </html>
