--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html><head>
   <title>한종언냐들</title>
   <meta charset="utf-8">
+  <style>
+a{color:black}
+</style>
 </head>
 <body>
   <h1><a href="index.html">한종언냐들</a></h1>
