--- a/1.html
+++ b/1.html
@@ -3,6 +3,27 @@
 <head>
   <title>한종언냐들</title>
   <meta charset="utf-8">
+  <style>
+    a{color:black}
+    .pink {color:pink}
+    .red{color:red}
+    .purple{color:purple}
+    .salmon{color:salmon}
+    .paleg{color:palegreen}
+    .jaju{color:mediumvioletred}
+    .olive{color:olive}
+    .hotpink{color:hotpink}
+    .lightseafreen{color:lightseagreen}
+    .tomato{color:tomato}
+    .magenta{color:magenta}
+    .yellow {color:yellow}
+    .orange{color:orange}
+    .sky{color:skyblue}
+    .aqua{color:aqua}
+    .navy{color:navy}
+    .royal{color:royalblue}
+    .indi{color:palevioletred}
+  </style>
 </head>
 <body>
   <h1><a href="index.html">한종언냐들</a></h1>
@@ -11,11 +32,11 @@
     <li><a href="2.html">김수연</a></li>
     <li><a href="3.html">최성미</a></li>
   </ol>
-  <h2>문현지</h2>
-  <p>(나이미상,패션문,ENTP)</p>
-  <p>최근 눈썹문신을 했다. "<a href="2.html">수연언니</a>와 함께"</p>
+  <h2 class="pink">문현지</h2>
+  <p><h3>(<span class="magenta">나이미상</span>,<span class="indi">패션문</span>,<span class="salmon">ENTP</span>)</h3></p>
+  <p>최근 눈썹문신을 했다. "<a href="2.html" class="hotpink">수연언니</a>와 함께"</p>
   <img src="눈썹.jpg" width="20%">
-  <p>그 누구보다 놀리는것에 집착하고 <strong>진심</strong>이다.</p>
+  <p>그 누구보다 놀리는것에 집착하고 <strong class="red">진심</strong>이다.</p>
   <p>근황은 소장과 겜저씨 미화팀장님 얘기밖에없다.</p>
 </body>
 </html>
