--- a/3.html
+++ b/3.html
@@ -3,6 +3,27 @@
 <head>
   <title>한종언냐들</title>
   <meta charset="utf-8">
+  <style>
+    a{color:black}
+    .pink {color:pink}
+    .red{color:red}
+    .purple{color:purple}
+    .salmon{color:salmon}
+    .paleg{color:palegreen}
+    .jaju{color:mediumvioletred}
+    .olive{color:olive}
+    .hotpink{color:hotpink}
+    .lightseafreen{color:lightseagreen}
+    .tomato{color:tomato}
+    .magenta{color:magenta}
+    .yellow {color:yellow}
+    .orange{color:orange}
+    .sky{color:skyblue}
+    .aqua{color:aqua}
+    .navy{color:navy}
+    .royal{color:royalblue}
+    .indi{color:palevioletred}
+</style>
 </head>
 <body>
   <h1><a href="index.html">한종언냐들</a></h1>
@@ -11,13 +32,13 @@
     <li><a href="2.html">김수연</a></li>
     <li><a href="3.html">최성미</a></li>
   </ol>
-  <h2>최성미</h2>
-  <p>(28,요정비슷함,ENFP)</p>
+  <h2><span class="royal">최성미</span></h2>
+  <p><h3>(<span class="navy">28</span>,요정비슷함,<span class="aqua">E</span><span class="salmon">N</span><span class="sky">F</span><span class="orange">P</span>)</h3></p>
   <img src="딴짓하다걸린사진.jpg" width="20%">
   <p>일하는척 하는데에 약간의 어려움이 있는 듯 하다.</p>
   <p>연애를 생각이상으로 오래 이어오는중.</p>
-  <p>의외로<strong>핫걸</strong></p>
-  <p><h3><strong>큐티섹시성미<a href="ANG.jpg">ANG~</a></strong></h3></p>
-  <p>근황은 노랭이의 코트 유무가 굉장히 궁금하다 정도.</p>
+  <p>의외로 <strong class="red">핫걸</strong></p>
+  <p><h3><strong><span class="pink">큐티</span><span class="tomato">섹시</span><span class="royal">성미</span><a href="ANG.jpg" class="orange">ANG~</a></strong></h3></p>
+  <p>근황은 <span class="yellow">노랭이</span>의 코트 유무가 굉장히 궁금하다 정도.</p>
 </body>
 </html>
