--- a/3.html
+++ b/3.html
@@ -4,6 +4,7 @@
   <title>한종언냐들</title>
   <meta charset="utf-8">
   <style>
+    
     a{color:black}
     .pink {color:pink}
     .red{color:red}
@@ -26,7 +27,7 @@
 </style>
 </head>
 <body>
-  <h1><a href="index.html">한종언냐들</a></h1>
+  <h1><a href="new2.html">한종언냐들</a></h1>
   <ol>
     <li><a href="1.html">문현지</a></li>
     <li><a href="2.html">김수연</a></li>
