--- a/2.html
+++ b/2.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h1><a href="index.html">한종언냐들</a></h1>
+  <h1><a href="new2.html">한종언냐들</a></h1>
   <ol>
     <li><a href="1.html">문현지</a></li>
     <li><a href="2.html">김수연</a></li>
