--- a/new2.html
+++ b/new2.html
@@ -67,8 +67,7 @@
         padding: 10px;
       }
 
-      #main {
-        float: left;
+      #main {        float: left;
         width: 25%;
       }
 
